<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fleetHomeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/searchCargosFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/interestsFragment"
        android:icon="@drawable/ic_interests"
        android:title="@string/interests" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>
