<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/businessHomeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchRoutesFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/interestsFragment"
        android:icon="@drawable/ic_interests"
        android:title="@string/interests"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>
